--- a/three/package.json
+++ b/three/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.181.2"
+    "three": "^0.181.2",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@types/three": "^0.181.0",
     "typescript": "^5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.3.1"
   }
 }
